--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXUTzSLG-8RB766m7zud3mhmW1F3-I0fM&callback=initMap">
+    </script>
   </body>
 </html>
