--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXUTzSLG-8RB766m7zud3mhmW1F3-I0fM">
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,8 +45,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXUTzSLG-8RB766m7zud3mhmW1F3-I0fM&callback=initMap">
-    </script>
   </body>
 </html>
